parsed wrong id to the swagger
